@@ -1,3 +1,13 @@
-class Sys::Time::Itimerval {
+class Sys::Time::Itimerval : pointer_t {
+  use Sys::Time::Timeval;
+  
+  native static method new : Sys::Time::Itimerval ();
 
+  native method DESTROY : void ();
+  
+  native method copy_it_interval : Sys::Time::Timeval ();
+  native method copy_it_value : Sys::Time::Timeval ();
+
+  native method set_it_interval : void ($it_interval : Sys::Time::Timeval);
+  native method set_it_value : void ($it_value : Sys::Time::Timeval);
 }
