@@ -14,6 +14,7 @@
       static method timersub : void ($a : Sys::Time::Timeval, $b : Sys::Time::Timeval, $res : Sys::Time::Timeval)
       
     * Added the Sys::Time::Timespec class.
+    * Added the Sys::Time::Itimerval class.
     
   [Bug Fix]
     * Fixed the bug that the internally integral type is wrong. 32bit is fixed to64bit.
